add sections skills, testimonials, subscribe, refactoring clients sections

--- a/src/blocks/cite/cite.html
+++ b/src/blocks/cite/cite.html
@@ -2,7 +2,7 @@
   <div class="cite__wrapper _container">
     <blockqoute class="cite__container">
       <p class="cite__text">“Apparently we had reached a great height in the atmosphere, for the sky was a dead black, and the stars had ceased to twinkle.”</p>
-      <cite class="cite__author"><span class="cite__accent">Andrew Slomka - Some Company</span></cite>
+      <cite class="cite__author"><span class="cite__accent">Andrew Slomka</span> - Some Company</cite>
     </blockqoute>
     <div class="cite__image-author">
       <picture>
