--- a/src/blocks/clients-2/clients-2.html
+++ b/src/blocks/clients-2/clients-2.html
@@ -14,6 +14,7 @@
       <p class="clients-2__text">Adipiscing diam donec adipiscing tristique risus nec feugiat in fermentum. Pretium vulputate sapien nec sagittis aliquam malesuada bibendum arcu vitae.</p>
       <p class="clients-2__text">Massa massa ultricies mi quis hendrerit dolor magna. Egestas dui id ornare arcu odio.</p>
     </div>
+    <h3 class="clients-2__our">Our clients</h3>
     <ul class="clients-2__list">
       <li class="clients-2__item">
         <svg width="165" height="29">
