add section subscribe footer

--- a/src/blocks/clients/clients.html
+++ b/src/blocks/clients/clients.html
@@ -1,4 +1,5 @@
 <section class="clients">
+  <div class="clients__bg"></div>
   <div class="clients__wrapper _container">
     <h2 class="clients__header">Our Clients</h2>
     <ul class="clients__list">
