--- a/src/blocks/features-2/features-2.html
+++ b/src/blocks/features-2/features-2.html
@@ -1,5 +1,5 @@
 <section class="features-2">
-  <div class="features-2__wrapper _container">
+  <div class="features-2__wrapper _container-fluid">
 
     <include src="src/blocks/title/title.html" locals='{
       "classMix": "features-2__title",
