--- a/src/blocks/features/features.html
+++ b/src/blocks/features/features.html
@@ -3,7 +3,7 @@
     <include src="src/blocks/title/title.html" locals='{
       "classMix": "features__title",
       "classMod": "title--white",
-      "title-accent": "Benefits",
+      "titleAccent": "Benefits",
       "title": "Shaping the future"
     }'></include>
 
@@ -12,7 +12,31 @@
       "classMod": "subheader--clr-white",
       "text": "Eget nunc scelerisque viverra mauris in aliquam. Dignissim sodales ut eu sem integer vitae. Libero nunc consequat interdum varius."
     }'></include>
-
+    <div class="features__slider">
+      <div class="features__slider-wrapper">
+        <h3 class="features__slider-header">Mobile Apps</h3>
+        <div class="features__slider-image">
+          <picture>
+            <source srcset="../img/features-photo-1@2x.webp 2x, ../img/features-photo-1.webp 1x" type="image/webp">
+            <source srcset="../img/features-photo-1@2x.jpg 2x, ../img/features-photo-1.jpg 1x" type="image/jpg">
+            <img src="../img/features-photo-1.jpg" srcset="../img/features-photo-1@2x.jpg 2x" alt="">
+          </picture>
+        </div>
+      </div>
+      <div class="features__slider-control">
+        <span class="features__slider-value">1</span>/<span class="features__slider-total">3</span>
+        <button class="features__slider-control-button">
+          <svg width="27" height="27">
+            <use xlink:href="#icon-arrow"></use>
+          </svg>
+        </button>
+        <button class="features__slider-control-button">
+          <svg width="27" height="27">
+            <use xlink:href="#icon-arrow"></use>
+          </svg>
+        </button>
+      </div>
+    </div>
     <div class="features__text-wrapper">
       <p class="features__text">Magna sit amet purus gravida. Sit amet porttitor eget dolor morbi non.</p>
       <p class="features__text">Lectus vestibulum mattis ullamcorper velit sed ullamcorper.</p>
@@ -21,25 +45,5 @@
       <p class="features__text">MPosuere ac ut consequat semper viverra.</p>
     </div>
     <button class="button features__button">Learn more</button>
-
-    <h3 class="features__slider-header">Mobile Apps</h3>
-    <div class="features__slider-image">
-      <picture>
-        <img src="./img/features-photo.jpg" alt="">
-      </picture>
-    </div>
-    <p class="features__slider-control">
-      <span class="features__slider-value">1</span>/<span class="features__slider-total">3</span>
-      <button class="features__slider-control-button">
-        <svg width="27" height="27">
-          <use xlink:href="#icon-arrow"></use>
-        </svg>
-      </button>
-      <button class="features__slider-control-button">
-        <svg width="27" height="27">
-          <use xlink:href="#icon-arrow"></use>
-        </svg>
-      </button>
-    </p>
   </div>
 </section>
