--- a/src/blocks/services-card/services-card.html
+++ b/src/blocks/services-card/services-card.html
@@ -3,7 +3,7 @@
     <include src="src/blocks/title/title.html" locals='{
       "classMix": "services-card__title",
       "classMod": "title--clr-dark-300",
-      "title-accent": "What we do",
+      "titleAccent": "What we do",
       "title": "What we  do"
     }'></include>
 
@@ -12,153 +12,56 @@
       "classMod": "subheader--clr-dark-300",
       "text": "Upper prior hundred links approach reedy, was to the than and the ever somehow surprised known for every by of there until road."
     }'></include>
-    
+
     <ul class="services-card__list">
       <li class="services-card__list-item">
-        <h3 class="services-card__list-header">
-          <sapn class="services-card__list-accent">1</sapn>
-          Upper prior hundred links approach reedy
-        </h3>
-        <p class="services-card__list-text">Upper prior hundred links approach reedy, was to the than and the ever somehow surprised known for every by of there until road.</p>
+        <div class="services-card__list-wrapper">
+          <h3 class="services-card__list-header">
+            <sapn class="services-card__list-accent">1</sapn>
+            Upper prior hundred links approach reedy
+          </h3>
+          <p class="services-card__list-text">Upper prior hundred links approach reedy, was to the than and the ever
+            somehow surprised known for every by of there until road.</p>
+        </div>
         <div class="services-card__list-image">
           <picture>
-            <img src="" alt="">
+            <source srcset="../img/services-photo-1@2x.webp 2x, ../img/services-photo-1.webp 1x" type="image/webp">
+            <source srcset="../img/services-photo-1@2x.jpg 2x, ../img/services-photo-1.jpg 1x" type="image/jpg">
+            <img src="../img/services-photo-1.jpg" srcset="../img/services-photo-1@2x.webp 2x" alt="">
           </picture>
         </div>
       </li>
       <li class="services-card__list-item">
-        <h3 class="services-card__list-header">
-          <sapn class="services-card__list-accent">2</sapn>
-          Upper prior hundred links approach reedy
-        </h3>
-        <p class="services-card__list-text">Upper prior hundred links approach reedy, was to the than and the ever somehow surprised known for every by of there until road.</p>
+        <div class="services-card__list-wrapper">
+          <h3 class="services-card__list-header">
+            <sapn class="services-card__list-accent">2</sapn>
+            Upper prior hundred links approach reedy
+          </h3>
+          <p class="services-card__list-text">Upper prior hundred links approach reedy, was to the than and the ever
+            somehow surprised known for every by of there until road.</p>
+        </div>
         <div class="services-card__list-image">
           <picture>
-            <img src="" alt="">
+            <source srcset="../img/services-photo-2@2x.webp 2x, ../img/services-photo-2.webp 1x" type="image/webp">
+            <source srcset="../img/services-photo-2@2x.jpg 2x, ../img/services-photo-2.jpg 1x" type="image/jpg">
+            <img src="../img/services-photo-2.jpg" srcset="../img/services-photo-2@2x.webp 2x" alt="">
           </picture>
         </div>
       </li>
       <li class="services-card__list-item">
-        <h3 class="services-card__list-header">
-          <sapn class="services-card__list-accent">3</sapn>
-          Upper prior hundred links approach reedy
-        </h3>
-        <p class="services-card__list-text">Upper prior hundred links approach reedy, was to the than and the ever somehow surprised known for every by of there until road.</p>
-        <div class="services-card__list-image">
-          <picture>
-            <img src="" alt="">
-          </picture>
+        <div class="services-card__list-wrapper">
+          <h3 class="services-card__list-header">
+            <sapn class="services-card__list-accent">3</sapn>
+            Upper prior hundred links approach reedy
+          </h3>
+          <p class="services-card__list-text">Upper prior hundred links approach reedy, was to the than and the ever
+            somehow surprised known for every by of there until road.</p>
         </div>
-      </li>
-
-      <li class="services-card__list-item">
-        <h3 class="services-card__list-header">
-          <sapn class="services-card__list-accent">4</sapn>
-          Upper prior hundred links approach reedy
-        </h3>
-        <p class="services-card__list-text">Upper prior hundred links approach reedy, was to the than and the ever somehow surprised known for every by of there until road.</p>
         <div class="services-card__list-image">
           <picture>
-            <img src="" alt="">
-          </picture>
-        </div>
-      </li>
-
-      <li class="services-card__list-item">
-        <h3 class="services-card__list-header">
-          <sapn class="services-card__list-accent">5</sapn>
-          Upper prior hundred links approach reedy
-        </h3>
-        <p class="services-card__list-text">Upper prior hundred links approach reedy, was to the than and the ever somehow surprised known for every by of there until road.</p>
-        <div class="services-card__list-image">
-          <picture>
-            <img src="" alt="">
-          </picture>
-        </div>
-      </li>
-
-      <li class="services-card__list-item">
-        <h3 class="services-card__list-header">
-          <sapn class="services-card__list-accent">6</sapn>
-          Upper prior hundred links approach reedy
-        </h3>
-        <p class="services-card__list-text">Upper prior hundred links approach reedy, was to the than and the ever somehow surprised known for every by of there until road.</p>
-        <div class="services-card__list-image">
-          <picture>
-            <img src="" alt="">
-          </picture>
-        </div>
-      </li>
-      
-      <li class="services-card__list-item">
-        <h3 class="services-card__list-header">
-          <sapn class="services-card__list-accent">7</sapn>
-          Upper prior hundred links approach reedy
-        </h3>
-        <p class="services-card__list-text">Upper prior hundred links approach reedy, was to the than and the ever somehow surprised known for every by of there until road.</p>
-        <div class="services-card__list-image">
-          <picture>
-            <img src="" alt="">
-          </picture>
-        </div>
-      </li>
-      <li class="services-card__list-item">
-        <h3 class="services-card__list-header">
-          <sapn class="services-card__list-accent">8</sapn>
-          Upper prior hundred links approach reedy
-        </h3>
-        <p class="services-card__list-text">Upper prior hundred links approach reedy, was to the than and the ever somehow surprised known for every by of there until road.</p>
-        <div class="services-card__list-image">
-          <picture>
-            <img src="" alt="">
-          </picture>
-        </div>
-      </li>
-      <li class="services-card__list-item">
-        <h3 class="services-card__list-header">
-          <sapn class="services-card__list-accent">9</sapn>
-          Upper prior hundred links approach reedy
-        </h3>
-        <p class="services-card__list-text">Upper prior hundred links approach reedy, was to the than and the ever somehow surprised known for every by of there until road.</p>
-        <div class="services-card__list-image">
-          <picture>
-            <img src="" alt="">
-          </picture>
-        </div>
-      </li>
-      <li class="services-card__list-item">
-        <h3 class="services-card__list-header">
-          <sapn class="services-card__list-accent">10</sapn>
-          Upper prior hundred links approach reedy
-        </h3>
-        <p class="services-card__list-text">Upper prior hundred links approach reedy, was to the than and the ever somehow surprised known for every by of there until road.</p>
-        <div class="services-card__list-image">
-          <picture>
-            <img src="" alt="">
-          </picture>
-        </div>
-      </li>
-      <li class="services-card__list-item">
-        <h3 class="services-card__list-header">
-          <sapn class="services-card__list-accent">11</sapn>
-          Upper prior hundred links approach reedy
-        </h3>
-        <p class="services-card__list-text">Upper prior hundred links approach reedy, was to the than and the ever somehow surprised known for every by of there until road.</p>
-        <div class="services-card__list-image">
-          <picture>
-            <img src="" alt="">
-          </picture>
-        </div>
-      </li>
-      <li class="services-card__list-item">
-        <h3 class="services-card__list-header">
-          <sapn class="services-card__list-accent">12</sapn>
-          Upper prior hundred links approach reedy
-        </h3>
-        <p class="services-card__list-text">Upper prior hundred links approach reedy, was to the than and the ever somehow surprised known for every by of there until road.</p>
-        <div class="services-card__list-image">
-          <picture>
-            <img src="" alt="">
+            <source srcset="../img/services-photo-3@2x.webp 2x, ../img/services-photo-3.webp 1x" type="image/webp">
+            <source srcset="../img/services-photo-3@2x.jpg 2x, ../img/services-photo-3.jpg 1x" type="image/jpg">
+            <img src="../img/services-photo-3.jpg" srcset="../img/services-photo-3@2x.webp 2x" alt="">
           </picture>
         </div>
       </li>
